--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "animate.css": "^4.1.1",
     "axios": "^1.5.1",
     "firebase": "^9.9.4",
+    "intl-tel-input": "^18.2.1",
+    "libphonenumber": "^0.0.10",
     "parse": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
